--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,23 +2,72 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/login_username"
-        android:hint="@string/username"/>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/login_password"
-        android:hint="@string/password"/>
+        android:layout_height="200dp"
+        android:background="@color/colorPrimary"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sign in to manage your profile"
+            android:textColor="@color/colorWhite"
+            android:layout_gravity="bottom"
+            android:padding="24dp"/>
 
-    <Button
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center">
+            <Button
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:text="FACEBOOK"
+                android:background="@drawable/bg_button_border"
+                android:layout_margin="24dp"
+                android:paddingLeft="24dp"
+                android:paddingRight="24dp"
+            />
+            <Button
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:text="GOOGLE"
+                android:paddingLeft="24dp"
+                android:paddingRight="24dp"
+                android:background="@drawable/bg_button_border"/>
+
+        </LinearLayout>
+    </LinearLayout>
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/do_login"
-        android:id="@+id/login"/>
+        android:visibility="gone"
+        android:orientation="vertical">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/login_username"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/login_password"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/login"/>
+    </LinearLayout>
+
 </LinearLayout>
 
