--- a/app/src/main/res/layout/best_offers_adapter_layout.xml
+++ b/app/src/main/res/layout/best_offers_adapter_layout.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardUseCompatPadding="true">
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_margin="16dp"
     >
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -75,5 +80,6 @@
                 android:textColor="@color/colorPrimary"/>
         </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
+</android.support.v7.widget.CardView>
+
