--- a/app/src/main/res/layout/categories_adapter_layout.xml
+++ b/app/src/main/res/layout/categories_adapter_layout.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.CardView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardUseCompatPadding="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center"
     android:layout_margin="12dp">
@@ -10,11 +18,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/coupon_icon"
-       />
+        android:layout_margin="6dp"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Automative"
         android:textStyle="bold"
-        android:layout_margin="12dp"/>
+        android:layout_margin="6dp"/>
 </LinearLayout>
+</android.support.v7.widget.CardView>
