--- a/app/src/main/res/layout/home_best_offers_fragment.xml
+++ b/app/src/main/res/layout/home_best_offers_fragment.xml
@@ -2,12 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/top_stories_deals_fragment_adapter">
-
-    </android.support.v7.widget.RecyclerView>
-
+        android:id="@+id/home_best_offers_fragment_recyclerview"
+        ></android.support.v7.widget.RecyclerView>
 </LinearLayout>
