--- a/app/src/main/res/layout/home_top_stories_fragment.xml
+++ b/app/src/main/res/layout/home_top_stories_fragment.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/top_stories_deals_fragment_adapter">
-
-    </android.support.v7.widget.RecyclerView>
-
+        android:id="@+id/home_top_stories_fragment_recyclerview"
+        ></android.support.v7.widget.RecyclerView>
 </LinearLayout>
