--- a/app/src/main/res/layout/top_stories_adapter_layout.xml
+++ b/app/src/main/res/layout/top_stories_adapter_layout.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v7.widget.CardView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardUseCompatPadding="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_margin="16dp">
+
 
     <ImageView
         android:layout_width="52dp"
@@ -46,3 +55,4 @@
             android:text="177 Offers"/>
     </LinearLayout>
 </LinearLayout>
+</android.support.v7.widget.CardView>
